# age-of-acquisition

./: .gitignore  README.md  create_training_data.py  curriculum_optimizer.py  optimize_word2vec.py  process_childes_dataset.py  pyproject.toml  refined_book_dataset.py  remove_score.py  requirements.txt  sort.py  timeline.txt  train_word2vec.py
Bayesian_Optimization_phase2/: optimize_fasttext.py  optimize_word2vec.py
complexity_ranker/: COMPLEXITY_RANKER_GLOBAL_VARIABLES.py
complexity_ranker/examples/: phonology_short.py
complexity_ranker/morphology/: morfessor_example.txt  morphological_complexity.py  morphological_stats.py  morphological_weights.py
complexity_ranker/phonology/: __init__.py  phonological_complexity.py  phonological_stats.py  phonological_weights.py  phonology_example_short.py
complexity_ranker/utils/: gutenberg.py  preprocess.py
concreteness_curriculum/: .gitignore  convert_raw_to_parquets.py  create_concreteness_lookup.py  create_curriculum.py  find_bin_examples.py  process_concreteness_dataset.py  process_raw_concreteness_data.py  score_shards.py  show_distribution.py
data/utils/: download.py  parquet_io.py  scoring.py
phonology_curriculum/: graph_plotter.py
regression_models/: eval_aoa.py  eval_fake_aoa.py
scripts/: Neighbour_README.md  README_eval_scripts.md  build_corpus.py  build_curricula.py  build_lookup_tables.py  eval_conc.py  plot_neighbor_overlap.py  plot_neighbor_overlap_by_words.py  plot_neighbor_overlap_early.py  plot_neighbor_overlap_fast.py  plot_neighbor_overlap_late.py  run_full_experiment.py  score_sentences.py
(+70 files in other folders)
